# AI_Agentic

./: .gitignore  langgraph.json  pyproject.toml
src/: agent.py  scientific_paper_agent_langgraph.ipynb
src/backend/: api.py  scientific_paper_agent.py
src/backend/utils/: nodes.py  tools.py
src/frontend/: main.py
src/scientific_paper_agent/: scientific_paper_agent.py
src/scientific_paper_agent/utils/: nodes.py  state.py  tools.py  utils.py
