[project]
name = "ai-agentic"
version = "0.1.0"
description = ""
authors = [
    {name = "chautuankien",email = "ctkiena2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "langchain (>=0.3.19,<0.4.0)",
    "langchain-community (>=0.3.18,<0.4.0)",
    "langgraph (>=0.2.74,<0.3.0)",
    "pdfplumber (>=0.11.5,<0.12.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "ipython (>=8.32.0,<9.0.0)",
    "langchain-openai (>=0.3.6,<0.4.0)",
    "langchain-deepseek (>=0.1.2,<0.2.0)"
]

[tool.poetr_y]
packages = [{include = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
